<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    tools:context=".CarAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/carImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/car1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight="0.9">

            <TextView
                android:id="@+id/brandTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/modelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_model"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/yearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_year"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/costTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                android:textSize="16sp"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
